<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>nl.pim16aap2.lightkeeper</groupId>
    <artifactId>lightkeeper-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>lightkeeper-maven-plugin</module>
        <module>lightkeeper-maven-plugin-test</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <version.lightkeeper-maven-plugin>1.0-SNAPSHOT</version.lightkeeper-maven-plugin>

        <version.maven>3.9.1</version.maven>

        <version.checkstyle>10.24.0</version.checkstyle>
        <version.errorprone>2.38.0</version.errorprone>
        <version.jspecify>1.0.0</version.jspecify>
        <version.lombok>1.18.38</version.lombok>
        <version.nullaway>0.12.7</version.nullaway>
        <version.pmd>7.13.0</version.pmd>
        <version.semver4j>5.7.0</version.semver4j>

        <version.manve-checkstyle-plugin>3.6.0</version.manve-checkstyle-plugin>
        <version.maven-clean-plugin>3.4.1</version.maven-clean-plugin>
        <version.maven-compiler-plugin>3.14.0</version.maven-compiler-plugin>
        <version.maven-install-plugin>3.1.4</version.maven-install-plugin>
        <version.maven-jar-plugin>3.4.2</version.maven-jar-plugin>
        <version.maven-javadoc-plugin>3.11.2</version.maven-javadoc-plugin>
        <version.maven-plugin-tools>3.15.1</version.maven-plugin-tools>
        <version.maven-pmd-plugin>3.26.0</version.maven-pmd-plugin>
        <version.maven-shade-plugin>3.6.0</version.maven-shade-plugin>
        <version.maven-site-plugin>3.21.0</version.maven-site-plugin>
        <version.maven-source-plugin>3.3.1</version.maven-source-plugin>
        <version.maven-surefire-plugin>3.5.3</version.maven-surefire-plugin>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <version>${version.errorprone}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>${version.jspecify}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${version.lombok}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.semver4j</groupId>
            <artifactId>semver4j</artifactId>
            <version>${version.semver4j}</version>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${version.manve-checkstyle-plugin}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${version.checkstyle}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <sourceDirectories>
                            <sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
                        </sourceDirectories>
                        <configLocation>${user.dir}/coderules/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <linkXRef>true</linkXRef>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-pmd-plugin</artifactId>
                    <version>${version.maven-pmd-plugin}</version>
                    <dependencies>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-core</artifactId>
                            <version>${version.pmd}</version>
                        </dependency>
                        <dependency>
                            <groupId>net.sourceforge.pmd</groupId>
                            <artifactId>pmd-java</artifactId>
                            <version>${version.pmd}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <rulesets>
                            <ruleset>${user.dir}/coderules/pmd-ruleset.xml</ruleset>
                        </rulesets>
                        <linkXRef>true</linkXRef>
                        <failOnViolation>true</failOnViolation>
                        <detail>true</detail>
                        <printFailingErrors>true</printFailingErrors>
                        <excludeRoots>
                            <excludeRoot>target/generated-sources</excludeRoot>
                        </excludeRoots>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>${version.maven-clean-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>${version.maven-install-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${version.maven-jar-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${version.maven-javadoc-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${version.maven-shade-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>${version.maven-site-plugin}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${version.maven-source-plugin}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>${version.maven-compiler-plugin}</version>
                            <configuration>
                                <encoding>UTF-8</encoding>
                                <fork>true</fork>
                                <release>${maven.compiler.release}</release>
                                <showWarnings>true</showWarnings>
                                <compilerArgs>
                                    <arg>-XDcompilePolicy=simple</arg>
                                    <arg>--should-stop=ifError=FLOW</arg>
                                    <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/(target)/.* -XepOpt:NullAway:ExcludedClassAnnotations=org.junit.jupiter.api.extension.ExtendWith,org.junit.jupiter.api.Timeout -XepOpt:NullAway:AnnotatedPackages=nl.pim16aap2 -Xep:NullAway:ERROR -XepDisableWarningsInGeneratedCode -Xep:MockNotUsedInProduction:OFF -Xep:NullableOnContainingClass:OFF -Xep:ParameterName:OFF -Xep:AnnotateFormatMethod:ERROR -Xep:AssistedInjectAndInjectOnSameConstructor:ERROR -Xep:BadComparable:ERROR -Xep:BadImport:ERROR -Xep:BadInstanceof:ERROR -Xep:BoxedPrimitiveConstructor:ERROR -Xep:CatchFail:ERROR -Xep:ClassCanBeStatic:ERROR -Xep:ClassInitializationDeadlock:ERROR -Xep:CloseableProvides:ERROR -Xep:ClosingStandardOutputStreams:ERROR -Xep:CollectionUndefinedEquality:ERROR -Xep:CollectorShouldNotUseState:ERROR -Xep:ComparableAndComparator:ERROR -Xep:CompareToZero:ERROR -Xep:ComplexBooleanConstant:ERROR -Xep:DateFormatConstant:ERROR -Xep:DefaultCharset:ERROR -Xep:DirectInvocationOnMock:ERROR -Xep:DoubleCheckedLocking:ERROR -Xep:EmptyCatch:ERROR -Xep:EmptyTopLevelDeclaration:ERROR -Xep:EqualsIncompatibleType:ERROR -Xep:EqualsUnsafeCast:ERROR -Xep:EqualsUsingHashCode:ERROR -Xep:EscapedEntity:ERROR -Xep:FallThrough:ERROR -Xep:Finally:ERROR -Xep:FloatCast:ERROR -Xep:FloggerArgumentToString:ERROR -Xep:FloggerStringConcatenation:ERROR -Xep:FutureReturnValueIgnored:ERROR -Xep:GetClassOnEnum:ERROR -Xep:HidingField:ERROR -Xep:IdentityHashMapUsage:ERROR -Xep:ImmutableAnnotationChecker:ERROR -Xep:ImmutableEnumChecker:OFF -Xep:InconsistentHashCode:ERROR -Xep:InheritDoc:ERROR -Xep:InjectOnConstructorOfAbstractClass:ERROR -Xep:InlineFormatString:ERROR -Xep:IntLongMath:ERROR -Xep:InvalidLink:ERROR -Xep:IterableAndIterator:ERROR -Xep:LockOnNonEnclosingClassLiteral:ERROR -Xep:LongDoubleConversion:ERROR -Xep:LongFloatConversion:ERROR -Xep:MathAbsoluteNegative:ERROR -Xep:MissingCasesInEnumSwitch:ERROR -Xep:MissingOverride:ERROR -Xep:MixedMutabilityReturnType:ERROR -Xep:ModifyCollectionInEnhancedForLoop:ERROR -Xep:ModifySourceCollectionInStream:ERROR -Xep:NarrowCalculation:ERROR -Xep:NarrowingCompoundAssignment:ERROR -Xep:NonAtomicVolatileUpdate:ERROR -Xep:NonOverridingEquals:ERROR -Xep:NullOptional:ERROR -Xep:NullableOptional:ERROR -Xep:ObjectEqualsForPrimitives:ERROR -Xep:ObjectToString:ERROR -Xep:OptionalMapToOptional:ERROR -Xep:OptionalNotPresent:ERROR -Xep:OverrideThrowableToString:ERROR -Xep:Overrides:ERROR -Xep:RedundantControlFlow:ERROR -Xep:ReturnFromVoid:ERROR -Xep:StatementSwitchToExpressionSwitch:ERROR -Xep:StaticAssignmentInConstructor:ERROR -Xep:StaticGuardedByInstance:ERROR -Xep:StreamResourceLeak:ERROR -Xep:StreamToIterable:ERROR -Xep:StringCaseLocaleUsage:ERROR -Xep:StringCharset:ERROR -Xep:StringSplitter:ERROR -Xep:SuperCallToObjectMethod:ERROR -Xep:SynchronizeOnNonFinalField:ERROR -Xep:ToStringReturnsNull:ERROR -Xep:TruthAssertExpected:ERROR -Xep:TruthIncompatibleType:ERROR -Xep:UnnecessaryBreakInSwitch:ERROR -Xep:UnnecessaryLambda:OFF -Xep:UnnecessaryLongToIntConversion:ERROR -Xep:UnnecessaryParentheses:ERROR -Xep:UnsafeReflectiveConstructionCast:ERROR -Xep:UnsynchronizedOverridesSynchronized:ERROR -Xep:UnusedMethod:ERROR -Xep:UnusedNestedClass:ERROR -Xep:UnusedTypeParameter:ERROR -Xep:UnusedVariable:ERROR -Xep:UseBinds:ERROR -Xep:VoidUsed:ERROR -Xep:WaitNotInLoop:ERROR
                                    </arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                                    <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                </compilerArgs>
                                <annotationProcessorPaths>
                                    <path>
                                        <groupId>org.projectlombok</groupId>
                                        <artifactId>lombok</artifactId>
                                        <version>${version.lombok}</version>
                                    </path>
                                    <path>
                                        <groupId>com.google.errorprone</groupId>
                                        <artifactId>error_prone_core</artifactId>
                                        <version>${version.errorprone}</version>
                                    </path>
                                    <path>
                                        <groupId>com.uber.nullaway</groupId>
                                        <artifactId>nullaway</artifactId>
                                        <version>${version.nullaway}</version>
                                    </path>
                                </annotationProcessorPaths>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>skip-errorprone</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-compiler-plugin</artifactId>
                            <version>${version.maven-compiler-plugin}</version>
                            <configuration>
                                <release>${maven.compiler.release}</release>
                                <encoding>UTF-8</encoding>
                                <annotationProcessorPaths>
                                    <path>
                                        <groupId>org.projectlombok</groupId>
                                        <artifactId>lombok</artifactId>
                                        <version>${version.lombok}</version>
                                    </path>
                                </annotationProcessorPaths>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
